; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_lp3943.c_lp3943_read_byte.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_lp3943.c_lp3943_read_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lp3943 = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lp3943_read_byte(%struct.lp3943* %0, i64 %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.lp3943*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.lp3943* %0, %struct.lp3943** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64* %2, i64** %7, align 8
  %10 = load %struct.lp3943*, %struct.lp3943** %5, align 8
  %11 = getelementptr inbounds %struct.lp3943, %struct.lp3943* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i64, i64* %6, align 8
  %14 = call i32 @regmap_read(i32 %12, i64 %13, i32* %9)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = load i32, i32* %8, align 4
  store i32 %18, i32* %4, align 4
  br label %23

19:                                               ; preds = %3
  %20 = load i32, i32* %9, align 4
  %21 = zext i32 %20 to i64
  %22 = load i64*, i64** %7, align 8
  store i64 %21, i64* %22, align 8
  store i32 0, i32* %4, align 4
  br label %23

23:                                               ; preds = %19, %17
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i32 @regmap_read(i32, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
